[gd_scene load_steps=11 format=2]

[ext_resource path="res://res/fonts/Space_Grotesk/static/SpaceGrotesk-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://res/fonts/Space_Grotesk/static/SpaceGrotesk-SemiBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/main.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=1]
TextEdit/colors/background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/bookmark_color = Color( 0, 0, 0, 1 )
TextEdit/colors/brace_mismatch_color = Color( 0, 0, 0, 1 )
TextEdit/colors/breakpoint_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_color = Color( 0, 0, 0, 1 )
TextEdit/colors/code_folding_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_existing_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_font_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_scroll_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_selected_color = Color( 0, 0, 0, 1 )
TextEdit/colors/current_line_color = Color( 0, 0, 0, 1 )
TextEdit/colors/executing_line_color = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color_readonly = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
TextEdit/colors/function_color = Color( 0, 0, 0, 1 )
TextEdit/colors/line_number_color = Color( 0, 0, 0, 1 )
TextEdit/colors/mark_color = Color( 0, 0, 0, 1 )
TextEdit/colors/member_variable_color = Color( 0, 0, 0, 1 )
TextEdit/colors/number_color = Color( 0, 0, 0, 1 )
TextEdit/colors/safe_line_number_color = Color( 0, 0, 0, 1 )
TextEdit/colors/selection_color = Color( 0, 0, 0, 1 )
TextEdit/colors/symbol_color = Color( 0, 0, 0, 1 )
TextEdit/colors/word_highlighted_color = Color( 0, 0, 0, 1 )
TextEdit/constants/completion_lines = 0
TextEdit/constants/completion_max_width = 0
TextEdit/constants/completion_scroll_width = 0
TextEdit/constants/line_spacing = 0
TextEdit/fonts/font = null
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/space = null
TextEdit/icons/tab = null

[sub_resource type="DynamicFont" id=5]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="ButtonGroup" id=4]

[sub_resource type="DynamicFont" id=6]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
z_index = -1
script = ExtResource( 3 )

[node name="Title" type="Label" parent="."]
modulate = Color( 0, 0.6, 0, 1 )
margin_left = 192.0
margin_top = 8.0
margin_right = 493.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 3 )
text = "Encrypt or Decrypt"

[node name="InputLabel" type="Label" parent="."]
modulate = Color( 0, 0.6, 0, 1 )
margin_top = 24.0
margin_right = 100.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "Regular Text:"

[node name="InputTextEdit" type="TextEdit" parent="."]
modulate = Color( 0, 1, 0, 1 )
margin_top = 56.0
margin_right = 512.0
margin_bottom = 168.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/background_color = Color( 1, 1, 1, 1 )

[node name="Output" type="Label" parent="."]
modulate = Color( 0, 0.6, 0, 1 )
margin_top = 176.0
margin_right = 100.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 2 )
text = "Encrypted Text:"

[node name="OuputTextEdit" type="TextEdit" parent="."]
modulate = Color( 0, 1, 0, 1 )
margin_top = 208.0
margin_right = 512.0
margin_bottom = 320.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/background_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
readonly = true

[node name="Helper" type="Label" parent="."]
modulate = Color( 0, 0.6, 0, 1 )
margin_top = 328.0
margin_right = 123.0
margin_bottom = 349.0
custom_fonts/font = SubResource( 2 )
text = "Please select either Encrypt or Decrypt"

[node name="EncyptBox" type="CheckBox" parent="."]
modulate = Color( 0, 0.6, 0, 1 )
margin_left = 354.0
margin_top = 328.0
margin_right = 436.0
margin_bottom = 355.0
custom_fonts/font = SubResource( 5 )
group = SubResource( 4 )
text = "Encrypt"

[node name="DecryptBox" type="CheckBox" parent="."]
modulate = Color( 0, 0.6, 0, 1 )
margin_left = 432.0
margin_top = 328.0
margin_right = 510.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 6 )
group = SubResource( 4 )
text = "Decrypt"

[node name="CopyButton" type="Button" parent="."]
modulate = Color( 0, 0.6, 0, 1 )
margin_left = 455.0
margin_top = 289.0
margin_right = 507.0
margin_bottom = 316.0
custom_fonts/font = SubResource( 7 )
text = "Copy"

[node name="CopyForDiscordButton" type="Button" parent="."]
modulate = Color( 0, 0.6, 0, 1 )
margin_left = 292.0
margin_top = 290.0
margin_right = 445.0
margin_bottom = 317.0
custom_fonts/font = SubResource( 7 )
text = "Copy (for discord)"

[connection signal="text_changed" from="InputTextEdit" to="." method="_on_InputTextEdit_text_changed"]
[connection signal="pressed" from="EncyptBox" to="." method="_on_EncyptBox_pressed"]
[connection signal="pressed" from="DecryptBox" to="." method="_on_DecryptBox_pressed"]
[connection signal="button_down" from="CopyButton" to="." method="_on_CopyButton_button_down"]
[connection signal="button_down" from="CopyForDiscordButton" to="." method="_on_CopyForDiscordButton_button_down"]
